added landing page base

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,7 +8,7 @@
  *= require bootstrap
  *= require bootstrap-material-design
  *= require material_icons
- *= require_tree .
+ *= require_directory .
 */
 
 $nprogress-color: #fff;
