--- a/app/views/visualizations/edit.html.erb
+++ b/app/views/visualizations/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing Visualization</h1>
+<div class="bs-docs-section ">
+  <div class="row">
+    <div class="col-sm-12">
+      <h1>Editing Visualization</h1>
+      
+      <%= render 'form' %>
 
-<%= render 'form' %>
-
-<%= link_to 'Show', @visualization %> |
-<%= link_to 'Back', @visualization.datum %>
+      <%= link_to 'Show', @visualization %> |
+      <%= link_to 'Back', @visualization.datum %>
+    </div>
+  </div>
+</div>
