landing page almost done

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -28,9 +28,6 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#about">About</a>
-                    </li>
-                    <li>
                         <%= link_to "Sign up", new_user_registration_path %>
                     </li>
                 </ul>
@@ -78,7 +75,7 @@
                     <p class="lead">Convert your lengthy data tables into beatifully crafted visualizations.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <%= image_tag('visualizations/sankey-large.png', class: 'img-responsive') %>
+                    <%= image_tag('more-than-tables.png', class: 'img-responsive') %>
                 </div>
             </div>
 
@@ -96,11 +93,11 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Showcase your visualizations online</h2>
+                    <h2 class="section-heading">Showcase your visualizations</h2>
                     <p class="lead">Save your data visualization and share them across the internet! Unlike saving and posting images, your visualizations can be updated at any time.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <%= image_tag('visualizations/stacked-bar-large.png', class: 'img-responsive') %>
+                    <%= image_tag('showcase-stacked-bar.png', class: 'img-responsive') %>
                 </div>
             </div>
 
@@ -119,10 +116,10 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Highly responsive</h2>
-                    <p class="lead">Your visualization follows the size of the container. There is little to no need for you to adjust all the details.</p>
+                    <p class="lead">Your visualization follows the size of the container. There is no need for you to adjust all the little details.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <%= image_tag('visualizations/sunburst-large.png', class: 'img-responsive') %>
+                    <%= image_tag('responsive.png', class: 'img-responsive') %>
                 </div>
             </div>
 
@@ -138,21 +135,9 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-6">
-                    <h2>Connect to Start Bootstrap:</h2>
-                </div>
-                <div class="col-lg-6">
-                    <ul class="list-inline banner-social-buttons">
-                        <li>
-                            <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                        </li>
-                        <li>
-                            <a href="#" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
-                        </li>
-                    </ul>
+                <div class="col-lg-12">
+                    <h2>Last month's most viewed visualizations:</h2>
+                    <iframe src="visualizations/29/standalone" height="600px" width="100%" frameborder="0"></iframe>
                 </div>
             </div>
 
@@ -177,14 +162,10 @@
                         </li>
                         <li class="footer-menu-divider">⋅</li>
                         <li>
-                            <a href="#services">Services</a>
-                        </li>
-                        <li class="footer-menu-divider">⋅</li>
-                        <li>
-                            <a href="#contact">Contact</a>
+                            <a href="#about">Faq</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright © Your Company 2014. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Insightful 2016</p>
                 </div>
             </div>
         </div>
