added ahoy to track most viewed visualization

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -137,7 +137,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2>Last month's most viewed visualizations:</h2>
-                    <iframe src="visualizations/29/standalone" height="600px" width="100%" frameborder="0"></iframe>
+                    <iframe src="<%= standalone_visualization_url @visualization %>?notrack" height="600px" width="100%" frameborder="0"></iframe>
                 </div>
             </div>
 
