fixed not getting most viewed visualization

--- a/app/views/visualizations/standalone.html.erb
+++ b/app/views/visualizations/standalone.html.erb
@@ -229,6 +229,8 @@
 
         $("#loadingPlaceholder").fadeOut();
 
+        console.log("<%= pageviews standalone_visualization_url(@visualization) %>")
+
         if(getParameterByName('save') == "true")
           setTimeout(function() {save();}, 800);
       });
