--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -56,6 +56,7 @@
               <tr>
                 <th>Title</th>
                 <th>Type</th>
+                <th>Views</th>
                 <th>Modified</th>
                 <th></th>
               </tr>
@@ -66,6 +67,7 @@
                 <tr>
                   <td><%= visualization.title %></td>
                   <td><%= visualization.type.humanize %></td>
+                  <td><%= visualization.views_counter_cache %></td>
                   <td><%= I18n.l visualization.updated_at.localtime, format: :long %></td>
                   <td>
                     <%= link_to 'Share', '', onclick: 'share("'+visualization_url(visualization)+'")', data: { toggle: :modal, target: "#myModal" } %>&nbsp;&nbsp;
