only show most viewed if exists

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -130,6 +130,7 @@
     <!-- /.content-section-a -->
 
   <a name="contact"></a>
+    <% if @visualization.present? %>
     <div class="banner">
 
         <div class="container">
@@ -146,7 +147,7 @@
 
     </div>
     <!-- /.banner -->
-
+    <% end %>
     <!-- Footer -->
     <footer>
         <div class="container">
