changed buttons looks

--- a/app/views/data/index.html.erb
+++ b/app/views/data/index.html.erb
@@ -30,7 +30,7 @@
 
         <%= paginate @data %><br>
 
-        <%= link_to 'New Data', new_datum_path, class: 'btn btn-success waves-effect btn-raised' %>
+        <%= link_to 'New Data', new_datum_path, class: 'btn btn-primary waves-effect btn-raised' %>
       </div>
     </div>
   </div>
