--- a/app/views/visualizations/edit.html.erb
+++ b/app/views/visualizations/edit.html.erb
@@ -3,10 +3,41 @@
     <div class="col-sm-12">
       <h1>Editing Visualization</h1>
       
-      <%= render 'form' %>
+      <%= form_for(@visualization) do |f| %>
+        <% if @visualization.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@visualization.errors.count, "error") %> prohibited this visualization from being saved:</h2>
 
-      <%= link_to 'Show', @visualization %> |
-      <%= link_to 'Back', @visualization.datum %>
+            <ul>
+            <% @visualization.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+            </ul>
+          </div>
+        <% end %>
+
+        <div class="form-group label-static is-empty">
+          <%= f.label :title, class: "control-label" %>
+          <%= f.text_field :title, class: "form-control" %>
+          <p class="help-block">Give this <%= @visualization.type.humanize.downcase %> a title.</p>
+        </div>
+
+        <div class="form-group label-static is-empty">
+          <%= f.label :caption, class: "control-label" %>
+          <%= f.text_field :caption, class: "form-control" %>
+          <p class="help-block">Write a short description so people know what this <%= @visualization.type.humanize.downcase %> means.</p>
+        </div>
+
+        <div class="form-group">
+          <iframe src="<%= standalone_visualization_path @visualization %>" frameborder="0" height="600px" width="100%" style="border:1px dashed #bbb"></iframe>
+        </div>
+
+        <div class="form-group">
+          <%= f.button class: "btn btn-primary btn-raised waves-effect" %>
+          <%= link_to 'Show', @visualization, class: "btn btn-sm"  %>
+          <%= link_to 'Cancel', @visualization.datum, class: "btn btn-sm" %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
