--- a/app/views/data/show.html.erb
+++ b/app/views/data/show.html.erb
@@ -128,7 +128,7 @@
                 </div>
               </div>
 
-              <button class="btn btn-primary">Generate</button>
+              <button class="btn btn-primary btn-raised">Generate</button>
             </form>
 
             <div class="well" id="image-link" style="display: none"></div>
