--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,9 +3,9 @@
 <head>
   <title>Insightful</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= stylesheet_link_tag    'welcome/landing-page', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => false %>
+  <%= stylesheet_link_tag    'welcome/landing-page', media: 'all', 'data-turbolinks-track' => false %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => false %>
   <%= yield(:head) %>
   <%= csrf_meta_tags %>
 </head>
@@ -136,9 +136,13 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-12">
+                <div class="text-center col-lg-12">
                     <h2>Last month's most viewed visualizations:</h2>
                     <iframe src="<%= standalone_visualization_url @visualization %>?notrack" height="600px" width="100%" frameborder="0"></iframe>
+
+                    <hr class="intro-divider">
+
+                    <%= link_to "Checkout other visualizations", visualizations_path, class: 'text-muted' %>
                 </div>
             </div>
 
