--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -136,13 +136,13 @@
         <div class="container">
 
             <div class="row">
-                <div class="text-center col-lg-12">
+                <div class="col-lg-12">
                     <h2>Last month's most viewed visualizations:</h2>
                     <iframe src="<%= standalone_visualization_url @visualization %>?notrack" height="600px" width="100%" frameborder="0"></iframe>
 
                     <hr class="intro-divider">
 
-                    <%= link_to "Checkout other visualizations", visualizations_path, class: 'text-muted' %>
+                    <p class="text-center"><%= link_to "Checkout other visualizations", visualizations_path, class: 'text-muted' %></p>
                 </div>
             </div>
 
