added faq link to dropdown

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -167,7 +167,7 @@
                         </li>
                         <li class="footer-menu-divider">⋅</li>
                         <li>
-                            <a href="#about">Faq</a>
+                            <%= link_to 'FAQ', faq_path %>
                         </li>
                     </ul>
                     <p class="copyright text-muted small">Insightful 2016</p>
