--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -15,12 +15,12 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown open">
-          
         </li>
         <li>
           <% if user_signed_in? %><a class="navbar-email" href="index.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true"><%= image_tag avatar_url(current_user), class: "navbar-avatar" %><%= current_user.email %>
               <b class="caret"></b><div class="ripple-container"></div></a>
             <ul class="dropdown-menu">
+              <li><%= link_to 'FAQ', faq_path %></li>
               <li><%= active_link_to 'Account', edit_user_registration_path, wrap_tag: :li %></li>
               <li class="divider"></li>
               <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
